Visual updates - removal of unused xml code Added margin to right vertical on mood row More space for mood number/faces + removal of gray border

--- a/app/src/main/res/layout/mood_entry_layout.xml
+++ b/app/src/main/res/layout/mood_entry_layout.xml
@@ -60,8 +60,8 @@
             android:id="@+id/llMainRowVertical"
             android:layout_width="30dp"
             android:layout_height="match_parent"
+            android:layout_marginRight="5dp"
             android:layout_weight="0"
-            android:background="@drawable/activity_row_rounded_corner"
             android:orientation="vertical">
 
             <TextView
