--- a/app/src/main/res/layout/activity_trend_view.xml
+++ b/app/src/main/res/layout/activity_trend_view.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:text="@string/welcome_text"
+        android:text="@string/trend_title"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/white"
