--- a/app/src/main/res/layout/activities_recycle_view_row.xml
+++ b/app/src/main/res/layout/activities_recycle_view_row.xml
@@ -2,54 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="40dp"
-    android:minWidth="100dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:minWidth="150dp">
 
-    <LinearLayout
-        android:id="@+id/clBorder"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/tvActivitiesRowName"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="5dp"
+        android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:autoSizeMaxTextSize="20dp"
+        android:autoSizeTextType="uniform"
         android:background="@drawable/activity_row_rounded_corner"
+        android:gravity="center_vertical"
+        android:text="@string/activities_name"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tvActivitiesRowName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="4dp"
-            android:layout_weight="2"
-            android:autoSizeTextType="uniform"
-            android:gravity="center_vertical"
-            android:text="@string/activities_name"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            tools:ignore="RtlCompat" />
-
-        <TextView
-            android:id="@+id/tvActivitiesRowCancel"
-            android:layout_width="32dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/activities_recycle_view_row_cross"
-            android:contentDescription="@string/activities_delete"
-            android:gravity="center_vertical"
-            android:text="@string/activities_cross"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:visibility="invisible"
-            tools:ignore="InefficientWeight,RtlCompat" />
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
