--- a/app/src/main/res/layout/mood_picker.xml
+++ b/app/src/main/res/layout/mood_picker.xml
@@ -23,19 +23,18 @@
 
         <TableLayout
             android:id="@+id/tableLayout"
-            android:layout_width="0dp"
-            android:layout_height="110dp"
+            android:layout_width="wrap_content"
+            android:layout_height="120dp"
             android:layout_margin="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@color/dark_gray"
                 android:gravity="center_horizontal">
@@ -43,8 +42,8 @@
                 <TextView
                     android:id="@+id/tvmpDateTitle"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autoSizeMinTextSize="16sp"
+                    android:layout_height="30dp"
+                    android:autoSizeMinTextSize="20sp"
                     android:autoSizeTextType="uniform"
                     android:text="@string/mood_picker_date_title"
                     android:textAlignment="center"
@@ -54,9 +53,9 @@
                 <TextView
                     android:id="@+id/tvmpDateValue"
                     android:layout_width="137dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_weight="0"
-                    android:autoSizeMinTextSize="16sp"
+                    android:autoSizeMinTextSize="20sp"
                     android:autoSizeTextType="uniform"
                     android:text="@string/mood_picker_date_value"
                     android:textAlignment="center"
@@ -66,7 +65,7 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@color/dark_gray"
                 android:gravity="center_horizontal">
@@ -74,8 +73,8 @@
                 <TextView
                     android:id="@+id/tvmpTimeTitle"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:autoSizeMinTextSize="16sp"
+                    android:layout_height="30dp"
+                    android:autoSizeMinTextSize="20sp"
                     android:autoSizeTextType="uniform"
                     android:minEms="6"
                     android:text="@string/mood_picker_time_title"
@@ -86,8 +85,8 @@
                 <TextView
                     android:id="@+id/tvmpTimeValue"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:autoSizeMinTextSize="16sp"
+                    android:layout_height="30dp"
+                    android:autoSizeMinTextSize="20sp"
                     android:autoSizeTextType="uniform"
                     android:text="@string/mood_picker_time_value"
                     android:textAlignment="center"
@@ -96,7 +95,7 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:background="@color/dark_gray"
                 android:gravity="center_horizontal">
@@ -104,8 +103,8 @@
                 <TextView
                     android:id="@+id/tvmpMoodTitle"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:autoSizeMinTextSize="16sp"
+                    android:layout_height="30dp"
+                    android:autoSizeMinTextSize="20sp"
                     android:autoSizeTextType="uniform"
                     android:text="@string/mood_picker_mood_title"
                     android:textAlignment="center"
@@ -115,8 +114,8 @@
                 <TextView
                     android:id="@+id/tvmpMoodValue"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:autoSizeMinTextSize="16sp"
+                    android:layout_height="30dp"
+                    android:autoSizeMinTextSize="20sp"
                     android:autoSizeTextType="uniform"
                     android:text="@string/mood_picker_mood_value"
                     android:textAlignment="center"
@@ -130,6 +129,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:autoSizeMinTextSize="14sp"
+            android:autoSizeTextType="uniform"
             android:text="@string/create"
             android:textAllCaps="false"
             app:layout_constraintEnd_toStartOf="@+id/bmpCancel"
@@ -143,6 +144,8 @@
             android:layout_margin="5dp"
             android:layout_marginStart="19dp"
             android:layout_marginEnd="10dp"
+            android:autoSizeMinTextSize="14sp"
+            android:autoSizeTextType="uniform"
             android:text="@string/cancel"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
