--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="dark_gray">#4E4E4E</color>
+    <color name="green">#00FF00</color>
+    <color name="gray">#808080</color>
 </resources>
