Can long press MoodEntry rows to go into a fullpage view of the available data to change (reusing FrontPage Activity)

--- a/app/src/main/res/layout/activity_front_page.xml
+++ b/app/src/main/res/layout/activity_front_page.xml
@@ -205,7 +205,7 @@
         <LinearLayout
             android:id="@+id/llActivities"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_weight="0"
             android:orientation="vertical">
 
@@ -238,7 +238,7 @@
         <LinearLayout
             android:id="@+id/llFeelings"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_weight="0"
             android:orientation="vertical">
 
