--- a/app/src/main/res/layout/activity_front_page.xml
+++ b/app/src/main/res/layout/activity_front_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".FrontPageActivity">
+    tools:context=".DetailedViewActivity">
 
     <ImageButton
         android:id="@+id/ibFrontLogin"
@@ -69,6 +69,7 @@
                     android:background="@drawable/activity_row_rounded_corner"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="@string/mood_picker_date_title"
+                    android:textAlignment="gravity"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
@@ -81,6 +82,7 @@
                     android:background="@drawable/activity_row_rounded_corner"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="@string/mood_picker_date_value"
+                    android:textAlignment="gravity"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
             </LinearLayout>
@@ -134,6 +136,7 @@
                 android:background="@drawable/activity_row_rounded_corner"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/front_mood_title"
+                android:textAlignment="gravity"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -197,6 +200,7 @@
                 android:background="@drawable/activity_row_rounded_corner"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/front_sleep_title"
+                android:textAlignment="gravity"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -261,6 +265,7 @@
                 android:background="@drawable/activity_row_rounded_corner"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/front_medication_title"
+                android:textAlignment="gravity"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -290,6 +295,7 @@
                 android:background="@drawable/activity_row_rounded_corner"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/activities_add_new"
+                android:textAlignment="gravity"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -300,8 +306,8 @@
                 android:layout_marginHorizontal="5dp"
                 android:layout_weight="0"
                 android:background="@drawable/activity_row_rounded_corner"
-                android:gravity="center_vertical"
-                android:textAlignment="center"
+                android:gravity="center_horizontal|center_vertical"
+                android:textAlignment="gravity"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:visibility="invisible" />
@@ -324,6 +330,7 @@
                 android:background="@drawable/activity_row_rounded_corner"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/feelings_add_new"
+                android:textAlignment="gravity"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -334,8 +341,8 @@
                 android:layout_marginHorizontal="5dp"
                 android:layout_weight="0"
                 android:background="@drawable/activity_row_rounded_corner"
-                android:gravity="center_vertical"
-                android:textAlignment="center"
+                android:gravity="center_horizontal|center_vertical"
+                android:textAlignment="gravity"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:visibility="invisible" />
